src/objects/Waitlist__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The customer waiting on the product</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Waitlisted Products</relationshipLabel>
        <relationshipName>Waitlist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>I_Am_the_Sales_Rep__c</fullName>
        <formula>Account__r.OwnerId =  $User.Id</formula>
        <label>I Am the Sales Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InActive_Date__c</fullName>
        <description>The date that the waitlist changed to inactive</description>
        <label>InActive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inactive_Reason__c</fullName>
        <label>Inactive Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted to Inventory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan__c</fullName>
        <inlineHelpText>The product (by market and category) that the customer is waitlisted for</inlineHelpText>
        <label>Product Rate Plan</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Inventory is not managed for that Product Rate Plan, therefore it cannot have a waitlist.</errorMessage>
            <filterItems>
                <field>zqu__ProductRatePlan__c.Capacity__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>zqu__ProductRatePlan__c.Capacity__c</field>
                <operation>notEqual</operation>
                <value>0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>zqu__ProductRatePlan__c</referenceTo>
        <relationshipLabel>Waitlist</relationshipLabel>
        <relationshipName>Waitlists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Sort_Order_Override__c</fullName>
        <defaultValue>1000</defaultValue>
        <label>Sort Order Override</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <formula>RIGHT(&quot;0000&quot; + TEXT(Sort_Order_Override__c),4) + Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort Order</label>
        <type>Text</type>
    </fields>
    <label>Waitlist</label>
    <nameField>
        <displayFormat>WAIT-{000000}</displayFormat>
        <label>Waitlist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Waitlist</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>